fable/test/valid/data_19.f
      program prog
      parameter(one=1)
      complex cnum
      data cnum /(one,2)/
      end
