fable/test/syntax_error/bad_gt.f
      program prog
      logical a
      a = 1 .gt 2
      end
